complete dialplan setting

--- a/apps/ruhnet-provisioner/style/app.css
+++ b/apps/ruhnet-provisioner/style/app.css
@@ -28,6 +28,11 @@ div.section-wrapper {
   font-size: +1.2em;
 }
 
+.dialplan-entry {
+  padding: 5px;
+  font-size: +1.2em;
+}
+
 .acl-entry {
   padding: 5px;
   font-size: +1.2em;
