add devicedetailsModal to show device details'

--- a/apps/ruhnet-provisioner/views/deviceDetailsModal.html
+++ b/apps/ruhnet-provisioner/views/deviceDetailsModal.html
@@ -31,7 +31,7 @@
         </div>
         {{/each}}
       </div>
-      <div class="config-fields" style="margin-top: 15px">
+      <div class="config-fields dynamic" style="margin-top: 15px">
         <div class="config-pair">
           <label>Key:</label>
           <input
