--- a/apps/ruhnet-provisioner/views/devicesetting.html
+++ b/apps/ruhnet-provisioner/views/devicesetting.html
@@ -22,12 +22,12 @@
         <td style="text-align: left">{{name}}</td>
         <td style="text-align: left">{{mac_address}}</td>
         <td style="text-align: left">
+          <button class="device-details">Details</button>
+        </td>
+        <td style="text-align: left">
           <button class="unlock-device" data-mac="{{mac_address}}">
             Unlock
           </button>
-        </td>
-        <td style="text-align: left">
-          <button class="device-custom">Custom Config</button>
         </td>
       </tr>
       {{/each}}
